k8s_manifests/frontend_manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  namespace: app-2025
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: frontend-fargate
  type: NodePort  # Changed from NodePort to ClusterIP for use with ALB
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
